BUG:176765

Query screen-geometry from kephal instead of QDesktopWidget, this makes "only current screen"-setting work as expected.

svn path=/trunk/KDE/kdebase/workspace/; revision=937005